crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_093_Sunsoft3R_Shanghai_Japan.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-093-Sunsoft3R/Shanghai (J) [!].nes
rom_sha256=b98334b339608eb22f49cd38ab7b32ccc15060bd8ee05597672d00635ff36407
frames=1141
fb_bytes=245760
cycles=33949782
audio_samples=836505
audio_fnv1a64=2afee35207f2587a
checkpoint f900 fb_fnv1a64=1ffe67dc5ad876e4
checkpoint f1100 fb_fnv1a64=1ffe67dc5ad876e4
