crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_095_Namcot3425_Dragon_Buster_Japan.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-095-Namcot3425/Dragon Buster (J) [!].nes
rom_sha256=2097623b1949604f0753e42075ccfd00516f2fb793354a939e456299abdd9ab6
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=c29cb0d6a3b765c6
checkpoint f900 fb_fnv1a64=aae9f9aafbb29af8
checkpoint f1100 fb_fnv1a64=aae9f9aafbb29af8
