crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_096_Multicart96_Oeka_Kids_Anpanman_no_Hiragana_Daisuki_Japan_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-096-Multicart96/Oeka Kids - Anpanman no Hiragana Daisuki (Japan).zip
rom_sha256=dda88f7e15e684216b47bc456a55515842594664e2487f92f6e7a9f77de6c8e7
frames=1141
fb_bytes=245760
cycles=33949780
audio_samples=836505
audio_fnv1a64=7ce68ab7f11ad9d8
checkpoint f900 fb_fnv1a64=d8141b5f4da75bbc
checkpoint f1100 fb_fnv1a64=d8141b5f4da75bbc
